--- a/app/views/newsletter/mailinglist/all.twig
+++ b/app/views/newsletter/mailinglist/all.twig
@@ -17,14 +17,13 @@
     </div>
 
     {% if recipients is empty %}
-        {% if searchCount and searchCount == 0 %}
+        {% if searchCount is defined and searchCount == 0 %}
             <p>Er zijn geen resultaten gevonden voor je zoekopdracht "<strong>{{ keyword }}</strong>".</p>
         {% else %}
             <p>Er zijn nog geen ontvangers voor de nieuwsbrief.</p>
         {% endif %}
-
     {% else %}
-        {% if searchCount %}
+        {% if searchCount is defined %}
             <p>Er zijn <strong>{{ searchCount }}</strong> resultaten gevonden voor je zoekopdracht "<strong>{{ keyword }}</strong>".</p>
         {% endif %}
 
