--- a/app/views/auth/password/change.twig
+++ b/app/views/auth/password/change.twig
@@ -6,7 +6,7 @@
 {% block content %}
     <form action="{{ urlFor('auth.password.change.post') }}" method="post" autocomplete="off">
         <div class="form-group">
-            <label for="password_old">Oud wachtwoord</label>
+            <label for="password_old">Huidig wachtwoord</label>
             <input type="password" name="password_old" id="password_old" class="form-control"/>
             {% include 'errors/field.twig' with {'field': 'password_old'} %}
         </div>
