--- a/app/views/templates/partials/navigation.twig
+++ b/app/views/templates/partials/navigation.twig
@@ -21,6 +21,7 @@
 
                 {# Left navigation #}
                     <ul class="nav navbar-nav">
+                        <li><a href="{{ urlFor('page.all') }}">Pagina's</a></li>
                         <li><a href="{{ urlFor('article.all') }}">Artikels</a></li>
                         <li><a href="{{ urlFor('newsletter.all') }}">Nieuwsbrieven</a></li>
                         <li><a href="{{ urlFor('file.all') }}">Bestanden</a></li>
