--- a/app/views/templates/default.twig
+++ b/app/views/templates/default.twig
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ assetUrl }}/css/stylesheet.css"/>
     <link href='//fonts.googleapis.com/css?family=Roboto:500,400italic,100,700italic,300,700,500italic,100italic,300italic,400' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="{{ assetUrl }}/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="{{ assetUrl }}/favicon.png">
 
     {% block stylesheets %}{% endblock %}
 </head>
