--- a/app/views/page/all.twig
+++ b/app/views/page/all.twig
@@ -40,7 +40,7 @@
                     <tr>
                         <td>{{ item.name }}</td>
 
-                        {% if item.isVisible %}
+                        {% if item.is_visible %}
                             <td class="success">Ja</td>
                         {% else %}
                             <td class="danger">Nee</td>
@@ -49,7 +49,7 @@
                         <td>{{ item.getCreatedAt }}</td>
                         <td>{{ item.getUpdatedAt }}</td>
                         <td>
-                            {% if item.isLocked == false %}
+                            {% if item.is_locked == false %}
                                 <a href="{{ urlFor('page.edit', {id: item.id}) }}" title="Wijzigen">Wijzigen</a>
                             {% else %}
                                 <span title="Je kan deze pagina niet wijzigen">Vergrendeld</span>
