Adds page reload when page order is successful

--- a/app/views/page/all.twig
+++ b/app/views/page/all.twig
@@ -134,10 +134,7 @@
                     '{{ csrf_key }}': '{{ csrf_token }}'
                 }, function(data) {
                     if (data.success) {
-                        $('#sort-modal').modal('hide');
-                    }
-                    else {
-                        console.log('failed');
+                        location.reload();
                     }
                 }, 'json');
             });
