--- a/app/views/file/edit.twig
+++ b/app/views/file/edit.twig
@@ -34,10 +34,13 @@
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
         <input name="_METHOD" value="DELETE" type="hidden"/>
     </form>
+
+    {# Confirmation #}
+    {% include 'templates/partials/modalDelete.twig' %}
+
 {% endblock %}
 
 {% block scripts %}
-    {% include 'templates/scripts/editor.twig' %}
-    {% include 'templates/scripts/formDelete.twig' %}
+    {% include 'templates/scripts/modalDelete.twig' %}
 {% endblock %}
 
