Adds translations for pages

--- a/app/views/page/create.twig
+++ b/app/views/page/create.twig
@@ -1,7 +1,7 @@
 {% extends 'templates/default.twig' %}
 
-{% block title %}Pagina aanmaken{% endblock %}
-{% block pageTitle %}Pagina aanmaken{% endblock %}
+{% block title %}{{ translator.get('CreatePage') }}{% endblock %}
+{% block pageTitle %}{{ translator.get('CreatePage') }}{% endblock %}
 
 {% block content %}
     {# Back button#}
@@ -13,12 +13,12 @@
 
     <form action="{{ urlFor('page.create.post') }}" method="post" autocomplete="off">
         <div class="form-group">
-            <label for="name">Naam</label>
+            <label for="name">{{ translator.get('Name') }}</label>
             <input type="text" name="name" id="name" {% if request.post('name') %} value="{{ request.post('name') }}" {% endif %}class="form-control"/>
             {% include 'errors/field.twig' with {field: 'name'} %}
         </div>
         <div class="form-group">
-            <label for="content">Inhoud</label>
+            <label for="content">{{ translator.get('Content') }}</label>
             <textarea name="content" id="content" class="form-control editor" rows="10">{% if request.post('content') %}{{ request.post('content') }}{% endif %}</textarea>
             {% include 'errors/field.twig' with {field: 'content'} %}
         </div>
@@ -34,13 +34,13 @@
                             {% else %}
                                 checked
                             {% endif %}
-                    > Zichtbaar op de navigatiebalk
+                    > {{ translator.get('VisibleOnNavigation') }}
                 </label>
             </div>
         </div>
         <br>
         <div class="form-group">
-            <input type="submit" value="Aanmaken" class="btn btn-primary form-control"/>
+            <input type="submit" value="{{ translator.get('Create') }}" class="btn btn-primary form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
