--- a/app/views/page/all.twig
+++ b/app/views/page/all.twig
@@ -1,39 +1,39 @@
 {% extends 'templates/default.twig'%}
 
-{% block title %}Pagina's{% endblock %}
-{% block pageTitle %}Pagina's{% endblock %}
+{% block title %}{{ translator.get('Pages') }}{% endblock %}
+{% block pageTitle %}{{ translator.get('Pages') }}{% endblock %}
 
 {% block content %}
     <div class="row toolbar">
         <div class="col-md-4 col-sm-6">
-            <a href="{{ urlFor('page.create') }}" class="btn btn-primary">Nieuw</a>
-            <a href="#" id="sort-pages" class="btn btn-primary">Wijzig volgorde</a>
+            <a href="{{ urlFor('page.create') }}" class="btn btn-primary">{{ translator.get('ButtonNew') }}</a>
+            <a href="#" id="sort-pages" class="btn btn-primary">{{ translator.get('ChangeOrder') }}</a>
         </div>
         <div class="col-md-8 col-sm-6">
-            {% include 'templates/partials/searchForm.twig' with {'url': urlFor('page.search')} only %}
+            {% include 'templates/partials/searchForm.twig' with {'url': urlFor('page.search'), 'translator': translator} only %}
         </div>
     </div>
 
     {% if items is empty %}
         {% if searchCount is defined and searchCount == 0 %}
-            <p>Er zijn geen resultaten gevonden voor je zoekopdracht "<strong>{{ keyword }}</strong>".</p>
+            <p>{{ translator.get('NoResultsForSearch') | format(keyword) | raw }}</p>
         {% else %}
-            <p>Er zijn nog geen pagina's.</p>
+            <p>{{ translator.get('NoPages') }}</p>
         {% endif %}
     {% else %}
         {% if searchCount is defined %}
-            <p>Er zijn <strong>{{ searchCount }}</strong> resultaten gevonden voor je zoekopdracht "<strong>{{ keyword }}</strong>".</p>
+            <p>{{ translator.get('ResultsForSearch') | format(searchCount, keyword) | raw }}</p>
         {% endif %}
 
         <div class="table-responsive">
             <table class="table table-bordered">
                 <thead>
                 <tr>
-                    <th>Naam</th>
-                    <th>Zichtbaar</th>
-                    <th>Aangemaakt op</th>
-                    <th>Laatst gewijzigd op</th>
-                    <th>Actie</th>
+                    <th>{{ translator.get('Name') }}</th>
+                    <th>{{ translator.get('Visible') }}</th>
+                    <th>{{ translator.get('CreatedAt') }}</th>
+                    <th>{{ translator.get('UpdatedAt') }}</th>
+                    <th>{{ translator.get('Action') }}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -42,18 +42,18 @@
                         <td>{{ item.name }}</td>
 
                         {% if item.is_visible %}
-                            <td class="success">Ja</td>
+                            <td class="success">{{ translator.get('Yes') }}</td>
                         {% else %}
-                            <td class="danger">Nee</td>
+                            <td class="danger">{{ translator.get('No') }}</td>
                         {% endif %}
 
                         <td>{{ item.getCreatedAt }}</td>
                         <td>{{ item.getUpdatedAt }}</td>
                         <td>
                             {% if item.is_locked == false %}
-                                <a href="{{ urlFor('page.edit', {id: item.id}) }}" title="Wijzigen">Wijzigen</a>
+                                <a href="{{ urlFor('page.edit', {id: item.id}) }}" title="Wijzigen">{{ translator.get('Edit') }}</a>
                             {% else %}
-                                <span title="Je kan deze pagina niet wijzigen">Vergrendeld</span>
+                                <span title="Je kan deze pagina niet wijzigen">{{ translator.get('Locked') }}</span>
                             {% endif %}
                         </td>
                     </tr>
@@ -61,11 +61,11 @@
                 </tbody>
 
                 <tr>
-                    <th>Naam</th>
-                    <th>Zichtbaar</th>
-                    <th>Aangemaakt op</th>
-                    <th>Laatst gewijzigd op</th>
-                    <th>Actie</th>
+                    <th>{{ translator.get('Name') }}</th>
+                    <th>{{ translator.get('Visible') }}</th>
+                    <th>{{ translator.get('CreatedAt') }}</th>
+                    <th>{{ translator.get('UpdatedAt') }}</th>
+                    <th>{{ translator.get('Action') }}</th>
                 </tr>
             </table>
         </div>
@@ -75,15 +75,15 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">Wijzig volgorde</h4>
+                        <h4 class="modal-title">{{ translator.get('ChangeOrder') }}</h4>
                     </div>
                     <div class="modal-body">
-                        <p class="alert alert-info">Versleep de namen om de volgorde te wijzigen.</p>
+                        <p class="alert alert-info">{{ translator.get('InfoChangeOrder') }}</p>
                         <div style="max-height: 500px; overflow-x:hidden;">
                             <table class="table table-bordered">
                                 <thead>
                                 <tr>
-                                    <th>Naam</th>
+                                    <th>{{ translator.get('Name') }}</th>
                                 </tr>
                                 </thead>
                                 <tbody id="sortable">
@@ -97,8 +97,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button id="confirm" type="button" class="btn btn-primary">Opslaan</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Annuleer</button>
+                        <button id="confirm" type="button" class="btn btn-primary">{{ translator.get('Save') }}</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">{{ translator.get('Cancel') }}</button>
                     </div>
                 </div>
             </div>
