--- a/app/views/page/edit.twig
+++ b/app/views/page/edit.twig
@@ -1,7 +1,7 @@
 {% extends 'templates/default.twig' %}
 
-{% block title %}Pagina wijzigen{% endblock %}
-{% block pageTitle %}Pagina wijzigen{% endblock %}
+{% block title %}{{ translator.get('EditPage') }}{% endblock %}
+{% block pageTitle %}{{ translator.get('EditPage') }}{% endblock %}
 
 {% block content %}
     {# Back button#}
@@ -13,12 +13,12 @@
 
     <form action="{{ urlFor('page.edit.post', {id: id}) }}" method="post" autocomplete="off">
         <div class="form-group">
-            <label for="name">Naam</label>
+            <label for="name">{{ translator.get('Name') }}</label>
             <input type="text" name="name" id="name" value="{{ request.post('name') ? request.post('name') : page.name }}" class="form-control"/>
             {% include 'errors/field.twig' with {field: 'name'} %}
         </div>
         <div class="form-group">
-            <label for="content">Inhoud</label>
+            <label for="content">{{ translator.get('Content') }}</label>
             <textarea name="content" id="content" class="form-control editor" rows="10">{{ request.post('content') ? request.post('content') : page.content }}</textarea>
             {% include 'errors/field.twig' with {field: 'content'} %}
         </div>
@@ -36,13 +36,13 @@
                                     checked
                                 {% endif %}
                             {% endif %}
-                    > Zichtbaar op de navigatiebalk
+                    > {{ translator.get('VisibleOnNavigation') }}
                 </label>
             </div>
         </div>
         <br>
         <div class="form-group">
-            <input type="submit" value="Wijzigen" class="btn btn-primary form-control"/>
+            <input type="submit" value="{{ translator.get('Edit') }}" class="btn btn-primary form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
@@ -52,7 +52,7 @@
 
     <form id="form-delete" action="{{ urlFor('page.delete', {id: id}) }}" method="post">
         <div class="form-group">
-            <input type="submit" value="Verwijderen" class="btn btn-danger form-control"/>
+            <input type="submit" value="{{ translator.get('Delete') }}" class="btn btn-danger form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
