--- a/app/views/templates/partials/modalDelete.twig
+++ b/app/views/templates/partials/modalDelete.twig
@@ -3,14 +3,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Bevestiging verwijderen</h4>
+                <h4 class="modal-title">{{ translator.get('Delete') }}</h4>
             </div>
             <div class="modal-body">
-                <p>Ben je zeker dat je dit wilt verwijderen? Deze actie kan niet ongedaan worden gemaakt.</p>
+                <p>{{ translator.get('InfoDelete') }}</p>
             </div>
             <div class="modal-footer">
-                <button id="confirm" type="button" class="btn btn-primary">Verwijder</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Annuleer</button>
+                <button id="confirm" type="button" class="btn btn-primary">{{ translator.get('Delete') }}</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">{{ translator.get('Cancel') }}</button>
             </div>
         </div>
     </div>
