--- a/app/views/templates/partials/searchForm.twig
+++ b/app/views/templates/partials/searchForm.twig
@@ -1,6 +1,6 @@
 <form action="{{ url }}" method="get" autocomplete="off" class="form-inline pull-right">
     <div class="input-group">
-        <input type="keyword" name="keyword" id="keyword" placeholder="Zoekterm" class="form-control"/>
+        <input type="keyword" name="keyword" id="keyword" placeholder="{{ translator.get('Keyword') }}" class="form-control"/>
         <span class="input-group-btn">
             <button type="submit" id="submit" class="btn btn-primary"/>
                 <span class="glyphicon glyphicon-search"></span>
