--- a/app/views/article/edit.twig
+++ b/app/views/article/edit.twig
@@ -1,7 +1,7 @@
 {% extends 'templates/default.twig' %}
 
-{% block title %}Artikel wijzigen{% endblock %}
-{% block pageTitle %}Artikel wijzigen{% endblock %}
+{% block title %}{{ translator.get('EditArticle') }}{% endblock %}
+{% block pageTitle %}{{ translator.get('EditArticle') }}{% endblock %}
 
 {% block content %}
     {# Back button#}
@@ -13,32 +13,32 @@
 
     <form action="{{ urlFor('article.edit.post', {id: id}) }}" method="post" autocomplete="off">
         <div class="form-group">
-            <label for="subject">Onderwerp</label>
+            <label for="subject">{{ translator.get('Subject') }}</label>
             <input type="text" name="subject" id="subject" value="{{ request.post('subject') ? request.post('subject') : article.subject }}" class="form-control"/>
             {% include 'errors/field.twig' with {field: 'subject'} %}
         </div>
         <div class="form-group">
-            <label for="summary">Korte beschrijving (1 à 2 zinnen)</label>
+            <label for="summary">{{ translator.get('Summary') }}</label>
             <textarea name="summary" id="summary" rows="2" class="form-control">{{ request.post('summary') ? request.post('summary') : article.summary }}</textarea>
             {% include 'errors/field.twig' with {field: 'summary'} %}
         </div>
         <div class="form-group">
-            <label for="content">Bericht</label>
+            <label for="content">{{ translator.get('Content') }}</label>
             <textarea name="content" id="content" class="form-control editor" rows="10">{{ request.post('content') ? request.post('content') : article.content }}</textarea>
             {% include 'errors/field.twig' with {field: 'content'} %}
         </div>
         <div class="form-group">
-            <label for="date">Datum (publicatie)</label>
+            <label for="date">{{ translator.get('DatePublication') }}</label>
             <input type="date" name="date" id="date" class="form-control" value="{{ request.post('date') ? request.post('date') : article.getPublishedAtDate }}">
             {% include 'errors/field.twig' with {field: 'date'} %}
         </div>
         <div class="form-group">
-            <label for="time">Tijd (publicatie)</label>
+            <label for="time">{{ translator.get('TimePublication') }}</label>
             <input type="time" name="time" id="time" class="form-control" value="{{ request.post('time') ? request.post('time') : article.getPublishedAtTime }}">
             {% include 'errors/field.twig' with {field: 'time'} %}
         </div>
         <div class="form-group">
-            <input type="submit" value="Wijzigen" class="btn btn-primary form-control"/>
+            <input type="submit" value="{{ translator.get('Edit') }}" class="btn btn-primary form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
@@ -48,7 +48,7 @@
 
     <form id="form-delete" action="{{ urlFor('article.delete', {id: id}) }}" method="post">
         <div class="form-group">
-            <input type="submit" value="Verwijderen" class="btn btn-danger form-control"/>
+            <input type="submit" value="{{ translator.get('Delete') }}" class="btn btn-danger form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
