--- a/app/views/newsletter/mailinglist/edit.twig
+++ b/app/views/newsletter/mailinglist/edit.twig
@@ -1,7 +1,7 @@
 {% extends 'templates/default.twig' %}
 
-{% block title %}Ontvanger wijzigen{% endblock %}
-{% block pageTitle %}Ontvanger wijzigen{% endblock %}
+{% block title %}{{ translator.get('EditRecipient') }}{% endblock %}
+{% block pageTitle %}{{ translator.get('EditRecipient') }}{% endblock %}
 
 {% block content %}
     {# Back button#}
@@ -13,23 +13,23 @@
 
     <form action="{{ urlFor('newsletter.mailingList.edit.post', {'address': recipient.getAddress}) }}" method="post" autocomplete="off">
         <div class="form-group">
-            <label for="name">E-mailadres</label>
+            <label for="name">{{ translator.get('Email') }}</label>
             <p class="form-control-static">{{ recipient.getAddress }}</p>
         </div>
         <div class="form-group">
-            <label for="name">Naam (optioneel)</label>
+            <label for="name">{{ translator.get('Name') }}</label>
             <input type="text" name="name" id="name" value="{{ request.post('name') ? request.post('name') : recipient.getName }}" class="form-control"/>
             {% include 'errors/field.twig' with {field: 'name'} %}
         </div>
         <div class="form-group">
-            <label for="subscribe">Wil de nieuwsbrief ontvangen?</label>
+            <label for="subscribe">{{ translator.get('WantsNewsletter') }}</label>
             <select name="subscribe" id="subscribe" class="form-control">
-                <option value="1" {{ (request.post('subsribe') and request.post('subsribe') == 1) or recipient.getSubscribed ? 'selected' : '' }}>Ja</option>
-                <option value="0" {{ (request.post('subsribe') and request.post('subsribe') == 2) or not recipient.getSubscribed  ? 'selected' : '' }}>Nee</option>
+                <option value="1" {{ (request.post('subsribe') and request.post('subsribe') == 1) or recipient.getSubscribed ? 'selected' : '' }}>{{ translator.get('Yes') }}</option>
+                <option value="0" {{ (request.post('subsribe') and request.post('subsribe') == 2) or not recipient.getSubscribed  ? 'selected' : '' }}>{{ translator.get('No') }}</option>
             </select>
         </div>
         <div class="form-group">
-            <input type="submit" value="Wijzigingen opslaan" class="btn btn-primary form-control"/>
+            <input type="submit" value="{{ translator.get('Edit') }}" class="btn btn-primary form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
@@ -39,7 +39,7 @@
 
     <form id="form-delete" action="{{ urlFor('newsletter.mailingList.delete', {'address': recipient.getAddress}) }}" method="post">
         <div class="form-group">
-            <input type="submit" value="Verwijderen" class="btn btn-danger form-control"/>
+            <input type="submit" value="{{ translator.get('Delete') }}" class="btn btn-danger form-control"/>
         </div>
 
         <input type="hidden" name="{{ csrf_key }}" value="{{ csrf_token }}"/>
